# zenitka-legacy

./: .gitignore  CMakeLists.txt  ChangeLog  README  SConstruct  TODO  error.c  error.h  global.h  main.c  main.h  sprites.c  sprites.h
data/: CMakeLists.txt
src/: CMakeLists.txt  global.h  main.c  main.h
